helloworld/kubernetes/greeter-server.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: greeter-server
  namespace: greeter
spec:
  selector:
    app: greeter-server 
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-server
  namespace: greeter
  labels:
    app: greeter-server
spec:
  replicas: 4
  selector:
    matchLabels:
      app: greeter-server
  template:
    metadata:
      labels:
        app: greeter-server
    spec:
      containers:
      - name: greeter-server
        image: oneoneonepig/greeter:v1.1
