helloworld/kubernetes/istio-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-greeter-client
  namespace: greeter
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greeter-client
  namespace: greeter
spec:
  hosts:
  - "*"
  gateways:
  - gateway-greeter-client
  http:
  - match:
    - uri:
        prefix: /greeter
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 8080
        host: greeter-client
